--- a/webapp/src/views/bill.twig
+++ b/webapp/src/views/bill.twig
@@ -490,7 +490,7 @@
 							<div class="box-tree">
 								<b>รวมเงินชำระสุทธิ
 									<b>
-										{{ data.billingInfo[0].total }}
+										{{ total }}
 									</b>
 									บาท</b>
 							</div>
