edit show total of bill, new cal from item if some tracking had cancelled

--- a/src/views/bill.twig
+++ b/src/views/bill.twig
@@ -496,7 +496,7 @@
 							<div class="box-tree">
 								<b>รวมเงินชำระสุทธิ
 									<b>
-										{{ data.billingInfo[0].total }}
+										{{ total }}
 									</b>
 									บาท</b>
 							</div>
